fix: adjust line-height for improved readability

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 html {
     height: 100%;
     font-size: 18px;
-    line-height: 1.4;
+    line-height: 1;
     scroll-behavior: smooth;
     animation: fadeInAnimation 1s;
     animation-timing-function: ease-out;
@@ -76,6 +76,7 @@ h2 {
     font-weight: 500;
     margin: 1.5rem;
     margin-left: 0;
+
 }
 
 h3 {
@@ -84,6 +85,7 @@ h3 {
     font-weight: 400;
     margin: 0;
     margin-bottom: 0.5rem;
+
 }
 
 p a,
@@ -142,7 +144,7 @@ p {
     color: var(--text-muted);
     font-weight: 300;
     display: inline-block;
-    /* line-height: 2.1rem; */
+    line-height: 2.1rem;
     margin: 0.5rem 0;
 }
 
